fix(look&feel): white background for inputs + div wrapping

--- a/client/look-and-feel/css/src/Form/Checkbox/Checkbox.scss
+++ b/client/look-and-feel/css/src/Form/Checkbox/Checkbox.scss
@@ -146,6 +146,8 @@
       display: flex;
       align-items: center;
       gap: 0.75rem;
+      background-color: var(--color-white);
+      clip-path: inset(0.22rem round 2px);
 
       & .af-checkbox__checked,
       & .af-checkbox__unchecked {
@@ -183,6 +185,10 @@
     & .af-checkbox__unchecked {
       display: none;
     }
+  }
+
+  &-select label:has(input[type="checkbox"]) {
+    background-color: var(--color-white);
   }
 
   &-select label:has(input[type="checkbox"]:checked) {
